# platform-plugin-course-series

./: .gitignore  README.md  conftest.py  noxfile.py  pyproject.toml  requirements.txt  setup.py
course_series/: admin.py  apps.py  factories.py  models.py  urls.py  utils.py  views.py
course_series/management/commands/: populate_program_data.py
course_series/migrations/: 0001_initial.py
tests/: settings.py  test_commands.py  test_models.py
