[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = [
    "E4",   # pycodestyle import rules
    "E7",   # pycodestyle semicolon rules
    "E9",   # pycodestyle errors
    "F",    # pyflakes (https://docs.astral.sh/ruff/rules/#pyflakes-f)
    "I",    # isort (https://docs.astral.sh/ruff/rules/#isort-i)
    "D",    # pydocstyle (https://docs.astral.sh/ruff/rules/#pydocstyle-d)
    "B",    # flake8-bugbear (https://docs.astral.sh/ruff/rules/#flake8-bugbear-b)
    "A",    # flake8-builtins (https://docs.astral.sh/ruff/rules/#flake8-builtins-a)
    "C4",   # flake8-comprehensions (https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4)
    "T20",  # flake8-print (https://docs.astral.sh/ruff/rules/#flake8-print-t20)
    "DJ",   # flake8-django (https://docs.astral.sh/ruff/rules/#flake8-django-dj)
]
ignore = [
    "D100",  # Missing docstring in public module
    "D102",  # Missing docstring in public method
    "D104",  # Missing docstring in public package
    "D106",  # Missing docstring in public nested class
    "D105",  # Missing docstring in magic method
    "D206",  # Indent with spaces (redundant with formatter)
]

[tool.ruff.lint.per-file-ignores]
"course_series/migrations/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "django",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"django" = ["django"]
